          still written to _MTN/options of the particular workspace.
          This lead to errors on any subsequent command which used these 
          options. This bug is fixed in so far that basic file type
          checks are applied on both options, so its no longer possible
          to set non-existing paths accidently or use a path to a directory
          as option argument for --db.

Fri Apr 11 22:50:44 UTC 2008

        0.40 release.

        Changes

        - The vim merger has been improved and now uses diff3 to merge
          non-conflict changes automatically before executing vimdiff.

        - Values used with the --depth option used to control recursion with
          node and path restrictions have changed. Using --depth=0 now means
          exactly the specified directories and *not* their children. Using
          --depth=1 now means the specified directories and their immediate
          children. Previously --depth=0 included children and --depth=1
          included grandchildren and it was not possible to exclude children
          using --depth.  The simple fix for anyone using --depth is to add 1 to
          the values they are using.

        - Document that ssh: and file: sync transports are not supported on
          native Win32.

        Bugs fixed

        - `commit' now uses keydir specified in _MTN/options

        - duplicate name conflicts now show a proper error message, even if
          a parent directory got renamed as well. In that case, the error
          message now shows both names for the directory and the offending
          file name.

        New features

        - The bare parent selector 'p:' can now be used in a workspace to
          query the parent(s) of the workspace' base revision. This is
          equivalent to "mtn au select p:`mtn au get_base_workspace_revision`".

        - push, pull, and sync can be run with a single argument, which looks
          like